--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,11 +1,14 @@
+@import url(light.css);
+@import url(dark.css);
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--color-font-primary-100);
+  background-color: var(--color-primary-100);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
