--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,3 +1,6 @@
+@import url(light.css);
+@import url(dark.css);
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,33 +8,33 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#logo{
+  transition: all 0.5s ease;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#logoMain{
+  width: 100px;
+  height: 100px;
+  color: var(--color-font-primary-100);
+  font-family: Monstserrat-Alternates, sans-serif;
+  transition: all 0.5s ease;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+#logoAi{
+  width: 100px;
+  height: 100px;
+  color: var(--color-secondary-100);
+  font-family: Sensation, monospace;
+  transition: all 0.5s ease;
 }
+
+
+#logoMain:hover, #logoAi:hover {
+  filter: drop-shadow(0px 0px 100em var(--color-secondary-100));
+  cursor: normal;
+}
+
+
 
 .card {
   padding: 2em;
