--- a/src/Styles/dark.css
+++ b/src/Styles/dark.css
@@ -2,6 +2,7 @@
     --color-primary-100:  #1E1E1E;
     --color-primary-200:  #141414;
     --color-secondary-100:  #D634FF;
+    --color-secondary-200:  #ff00ff;
     --color-font-primary-100:  #FFFFFF;
     --color-font-primary-100:  #D2D2D2;    
 }
