--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -14,6 +14,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
 }
 
 a {
@@ -29,8 +31,9 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 h1 {
@@ -55,6 +58,16 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  width: 100%;
+  height: 100%;
 }
 
 @media (prefers-color-scheme: light) {
