--- a/src/Styles/light.css
+++ b/src/Styles/light.css
@@ -2,6 +2,7 @@
     --color-primary-100:  #C7C7C7;
     --color-primary-200:  #AFAFAF;
     --color-secondary-100:  #6B18D6;
+    --color-secondary-200:  #8c00ff;
     --color-font-primary-100:  #000000;
     --color-font-primary-200:  #141414;    
 }
