--- a/src/Styles/light.css
+++ b/src/Styles/light.css
@@ -1,5 +1,5 @@
 .light{
-    --color-primary-100:  #C7C7C7;
+    --color-primary-100:  #dadada;
     --color-primary-200:  #AFAFAF;
     --color-secondary-100:  #6B18D6;
     --color-secondary-200:  #8c00ff;
