--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -6,6 +6,7 @@ nav{
     width: 100%;
     align-items: center;
     justify-content: center;
+    color: var(--color--font-primary-100);
 }
 
 ul{
@@ -22,4 +23,25 @@ ul{
 li{
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    color: var(--color--font-primary-100);
+}
+
+a{
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: 1rem;
+    transition: all 0.5s ease;
+    color: var(--color--font-primary-100);
+}
+
+li a:hover{
+    text-decoration: none;
+    color: var(--color-secondary-100);
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: 1rem;
+    transition: all 0.5s ease;
+    cursor: pointer;
 }
