--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -15,16 +15,25 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  padding: 0;
+  margin: 0;
   
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
 }
-a:hover {
-  color: #535bf2;
+
+li {
+  list-style: none;
+}
+
+html{
+  scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
@@ -32,8 +41,8 @@ body {
   display: flex;
   place-items: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
@@ -64,7 +73,7 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 1em;
   width: 100%;
   height: 100%;
