--- a/src/Styles/dark.css
+++ b/src/Styles/dark.css
@@ -17,17 +17,18 @@
     --color-secondary-200:  #ff00ff;
     --color-font-primary-100:  #FFFFFF;
     --color-font-primary-200:  #D2D2D2;    
+    --color-font-primary-300:  #FFFFFF27;
 
-    --color-cell-0: var(--color-secondary-105);
-    --color-cell-2: var(--color-secondary-110);
-    --color-cell-4: var(--color-secondary-120);
-    --color-cell-8: var(--color-secondary-130);
-    --color-cell-16: var(--color-secondary-140);
-    --color-cell-32: var(--color-secondary-150);
-    --color-cell-64: var(--color-secondary-160);
-    --color-cell-128: var(--color-secondary-170);
-    --color-cell-256: var(--color-secondary-180);
-    --color-cell-512: var(--color-secondary-190);
-    --color-cell-1024: var(--color-secondary-195);
-    --color-cell-2048: var(--color-secondary-200);
+    --color-cell-0: var(--color-primary-100);
+    --color-cell-2: #ffae00;
+    --color-cell-4: #ff7700;
+    --color-cell-8: #F0583A;
+    --color-cell-16: #ff5151;
+    --color-cell-32: #ff6da0;
+    --color-cell-64: #ff5c87;
+    --color-cell-128: #F873E2;
+    --color-cell-256: #FB86FF;
+    --color-cell-512: #BF70FF;
+    --color-cell-1024: #ff46ff;
+    --color-cell-2048: #ff00ff;
 }
