Refactor Board and index styles, and fix focus outline

--- a/src/Styles/Board.css
+++ b/src/Styles/Board.css
@@ -9,7 +9,12 @@
     max-width: fit-content;
     width: 100%;
     align-self: center;
+    outline: none;
+}
 
+.board :focus{
+    outline: none;
+    
 }
 .tags{
     display: flex;
