--- a/src/Styles/Grid.css
+++ b/src/Styles/Grid.css
@@ -7,7 +7,7 @@
     max-width: fit-content;
     width: 100%;
     align-self: center;
-    transition:  0.5s ;
+    transition: all 20s ease ;
 }
 
 .cell{
