Refactor Cell component to fix borderRadius and display logic in Cell.tsx, add new color variable in light.css, and update comment in Cell.ts file, now there an evemnt when aplayer wins

--- a/src/Styles/light.css
+++ b/src/Styles/light.css
@@ -43,4 +43,5 @@
     --color-cell-2097152: #000000;
     --color-cell-4194304: #000000;
     --color-cell-8388608: #000000;
+    --color-cell-777: #8c00ff;
 }
