Refactorizar componente Cell para corregir borderRadius y lógica de visualización en Cell.tsx, agregar nueva variable de color en light.css y actualizar comentario en archivo Cell.ts, ahora hay un evento cuando el jugador gana

--- a/src/Styles/dark.css
+++ b/src/Styles/dark.css
@@ -42,4 +42,5 @@
     --color-cell-1048576: #e2e2e2;
     --color-cell-2097152: #e2e2e2;
     --color-cell-4194304: #e2e2e2;
+    --color-cell-777: var(--color-secondary-200);
 }
