--- a/src/Styles/light.css
+++ b/src/Styles/light.css
@@ -43,5 +43,5 @@
     --color-cell-2097152: #000000;
     --color-cell-4194304: #000000;
     --color-cell-8388608: #000000;
-    --color-cell-777: #8c00ff;
+    --color-cell-777: var(--color-secondary-200);
 }
