--- a/src/Styles/Board.css
+++ b/src/Styles/Board.css
@@ -45,3 +45,16 @@
     padding-bottom: 15px;
     padding-top: 15px;
 }
+
+#playertag{
+    display: flex;
+    width: 80%;
+    font-weight: bolder;
+    border: 1px solid var(--color-font-primary-100);
+    font-size: 20px;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    padding: 10px;
+}
