add gave over dialog and game restart feature (try again doesn't work)

--- a/src/Styles/dark.css
+++ b/src/Styles/dark.css
@@ -1,6 +1,7 @@
 .dark{
     --color-primary-100:  #1E1E1E;
     --color-primary-200:  #141414;
+    --color-primary-200-rgb:  20,20,20;
     --color-primary-300:  #383838;
     --color-secondary-100:  #ff00ff;
     --color-secondary-105:  #ff00ff05;
