--- a/src/Styles/light.css
+++ b/src/Styles/light.css
@@ -1,6 +1,7 @@
 .light{
     --color-primary-100:  #dadada;
     --color-primary-200:  #AFAFAF;
+    --color-primary-200-rgb:  175,175,175;
     --color-primary-300:  #bbb9b9;
     --color-secondary-100:  #6B18D6;
     --color-secondary-105:  #6B18D605;
