--- a/src/Styles/Board.css
+++ b/src/Styles/Board.css
@@ -14,6 +14,7 @@
 
 .board{
     display: flex;
+    position: relative;
     flex-direction: row;
     align-items: center;
     justify-content: center;
