--- a/src/Styles/Dialog.css
+++ b/src/Styles/Dialog.css
@@ -18,7 +18,7 @@
 #try-again-button{
     width: fit-content;
     font-weight: 600;
-    background-color: var(--color-secondary-150);
+    background-color: var(--color-try-again-button);
     color: var(--color-font-primary-200);
     border: 0;
 }
