--- a/src/Styles/dark.css
+++ b/src/Styles/dark.css
@@ -19,6 +19,7 @@
     --color-font-primary-100:  #FFFFFF;
     --color-font-primary-200:  #D2D2D2;    
     --color-font-primary-300:  #FFFFFF27;
+    --color-try-again-button: #aa1daa;
 
     --color-cell-0: var(--color-primary-100);
     --color-cell-2: #ffae00;
