--- a/src/Styles/dark.css
+++ b/src/Styles/dark.css
@@ -16,6 +16,7 @@
     --color-secondary-190:  #ff00ff90;
     --color-secondary-195:  #ff00ff95;
     --color-secondary-200:  #ff00ff;
+    --color-secondary-200-rgb:  255,0,255;
     --color-font-primary-100:  #FFFFFF;
     --color-font-primary-200:  #D2D2D2;    
     --color-font-primary-300:  #FFFFFF27;
