--- a/src/Styles/light.css
+++ b/src/Styles/light.css
@@ -16,6 +16,7 @@
     --color-secondary-190:  #6a18d690;
     --color-secondary-195:  #6a18d695;
     --color-secondary-200:  #8c00ff;
+    --color-secondary-200-rgb:  140,0,255;
     --color-font-primary-100:  #000000;
     --color-font-primary-200:  #141414;
     --color-font-primary-300:  #00000027;      
