--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,6 +1,108 @@
 footer{
     width: 100%;
-    height: 90px;
     background-color: var(--color-primary-200);
     align-self: baseline;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
 }
+    img{
+        width: 30px;
+        height: 30px;
+        margin: 10px;
+    }
+
+    section{
+        margin-top: 0px;
+        font-family: monospace;
+        padding-top: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 60%;
+        height: 100%;
+        color: var(--color-font-primary-100);
+        text-align: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        background-color: var(--color-primary-200);
+        max-height: 250px;
+        align-self: center;
+    }
+
+    .content{
+        color: var(--color-font-primary-100);
+        display: flex;
+        flex-direction: column;
+        width: 30%;
+        align-items: center;
+    }
+
+    .content a {
+        color: var(--color-font-primary-100);
+        text-decoration: none;
+        font-size: medium;
+        margin: 0;
+        padding: 0;
+        transition: 0s;
+    }
+    .content a:hover{
+        color: var(--color-secondary-100);
+        text-decoration: none;
+        font-size: medium;
+        margin: 0;
+        padding: 0;
+    }
+
+    .content ul{
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        flex-direction: column;
+        width: 50%;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        align-self: center;
+    }
+
+    .content ul li{
+        padding: 0px;
+        margin: 1px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+    }
+
+    hr{
+        width: 100%;
+        border: 1px solid var(--color-font-primary-100);
+    }
+
+    .top{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .bot{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    @media screen and (max-width: 800px){
+        .top{
+            flex-direction: column;
+        }
+        .des{
+            width: 100%;
+        }
+        .cont{
+            width: 100%;
+        }
+    }
