feat: colors switch

--- a/src/Styles/Game.css
+++ b/src/Styles/Game.css
@@ -36,7 +36,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: var(--color-primary-200);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -48,13 +48,13 @@
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: white;
+    background-color: var(--color-primary-100);
     -webkit-transition: .4s;
     transition: .4s;
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: var(--color-try-again-button);
   }
   
   input:focus + .slider {
@@ -79,6 +79,7 @@
   .putadaModeDiv{
     display: flex;
     justify-content: center;
+    gap: 20px;
   }
 
   #putadaModeSwitch{
