chore: initial ui

--- a/src/Styles/Board.css
+++ b/src/Styles/Board.css
@@ -8,7 +8,6 @@
     padding: 10px;
     max-width: fit-content;
     width: 100%;
-    align-self: center;
     outline: none;
 }
 
@@ -63,4 +62,32 @@
     justify-content: center;
     align-content: center;
     padding: 10px;
+}
+
+#llmSelector{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    gap: 10px;
+    padding: 10px;
+    max-width: fit-content;
+    width: 100%;
+    align-self: center;
+    outline: none;
+}
+
+#llmSelector button{
+    color: var(--color-font-primary-100);
+    background-color: var(--color-secondary-120);
+    border: 0;
+}
+
+#llmSelector button:hover{
+    background-color: var(--color-secondary-150);
+}
+
+#llmSelector .enabled{
+    background-color: var(--color-secondary-150);
 }
