--- a/src/Styles/Game.css
+++ b/src/Styles/Game.css
@@ -1,7 +1,7 @@
 .boards{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin-top: 0px;
     width: 100vw;
     flex-direction: row;
