chore: Update styles and switch label in Game component

--- a/src/Styles/Game.css
+++ b/src/Styles/Game.css
@@ -13,22 +13,19 @@
     }
 }
 
- /* The switch - the box around the slider */
  .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 50px;
+    height: 24px;
   }
   
-  /* Hide default HTML checkbox */
   .switch input {
     opacity: 0;
     width: 0;
     height: 0;
   }
   
-  /* The slider */
   .slider {
     position: absolute;
     cursor: pointer;
@@ -39,18 +36,20 @@
     background-color: var(--color-primary-200);
     -webkit-transition: .4s;
     transition: .4s;
+    border-radius: 34px;
   }
   
   .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
+    height: 16px;
+    width: 16px;
     left: 4px;
     bottom: 4px;
     background-color: var(--color-primary-100);
     -webkit-transition: .4s;
     transition: .4s;
+    border-radius: 50%;
   }
   
   input:checked + .slider {
@@ -62,14 +61,13 @@
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(24px);
+    -ms-transform: translateX(24px);
+    transform: translateX(24px);
   }
   
-  /* Rounded sliders */
   .slider.round {
-    border-radius: 34px;
+    border-radius:14px;
   }
   
   .slider.round:before {
@@ -80,6 +78,8 @@
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin: 0;
+    padding: 0;
   }
 
   #putadaModeSwitch{
