--- a/src/Styles/Game.css
+++ b/src/Styles/Game.css
@@ -82,6 +82,11 @@
     padding: 0;
   }
 
+  .putadaModeDiv h3{
+    align-self: center;
+    margin: 0;
+  }
+
   #putadaModeSwitch{
     align-self: center;
   }
