--- a/src/Styles/Game.css
+++ b/src/Styles/Game.css
@@ -90,3 +90,9 @@
   #putadaModeSwitch{
     align-self: center;
   }
+
+  @media screen and (max-width: 800px){
+    .boards{
+        width: auto;
+    }
+}
