--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -6,6 +6,7 @@ footer{
     flex-direction: column;
     align-items: center;
     align-content: center;
+    min-height: min-content;
 }
     img{
         width: 30px;
@@ -98,12 +99,19 @@ footer{
     .copy p {
         font-family: monospace;
         margin: 0;
+        margin-top: 20px;
         padding: 0;
     }
 
-    @media screen and (max-width: 800px){
+    @media screen and (max-width: 800px){    
+        .content{
+            width: 100%;
+            padding: 0;
+            margin: 0;
+        }
         .top{
             flex-direction: column;
+            width: 100%;
         }
         .des{
             width: 100%;
